# src/swagger/swagger.json
@@ -1,21 +1,25 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "API User_Auth",
-    "description": "API user com autenticação",
+    "title": "API CRUD AUTH",
+    "description": "CRUD AUTH",
     "contact": {
-      "email": "johnicassere@hotmail.com"
+      "email": "johnicassere@email.com.br"
     },
     "version": "1.0.0"
   },
   "servers": [
+    {
+      "url": "https://crud-express-auth.herokuapp.com/",
+      "description": "API no Heroku"
+    },
     {
       "url": "http://localhost:3001",
       "description": "API local"
     }
   ],
   "paths": {
-    "/all-users": {
+    "/users/all-users": {
       "get": {
         "summary": "Buscar todos os usuários",
         "description": "Rota responsável por buscar todos os usuários",
@@ -26,10 +30,56 @@
           },
           "200": {
             "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/users/create": {
+      "post": {
+        "summary": "Criar um novo usuário",
+        "description": "Rota responsável por criar um novo usuário",
+        "tags": ["Users"],
+        "requestBody": {
+          "content": {
             "application/json": {
               "schema": {
-                "type": "array",
-                "items": {
+                "$ref": "#/components/schemas/User"
+              },
+              "examples": {
+                "Users": {
+                  "value": {
+                    "name": "Johni",
+                    "userName": "cassere",
+                    "email": "cassere@gmail.com",
+                    "password": "123456",
+                    "img": "../img/img.png"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schemma": {
+                  "type": "object",
                   "$ref": "#/components/schemas/User"
                 }
               }
@@ -37,10 +87,50 @@
           }
         }
       }
+    },
+    
+    "/auth/login": {
+      "post": {
+        "summary": "Entrar/Logar",
+        "description": "Rota responsável fazer o login de um user cadastrado",
+        "tags": ["Auth"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              },
+              "examples": {
+                "User": {
+                  "value": {
+                    "email": "cassere@gmail.com",
+                    "password": "123456"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
+   
   },
   "components": {
-    
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    },
     "schemas": {
       "User": {
         "type": "object",
